--- a/surveyForm/styles.css
+++ b/surveyForm/styles.css
@@ -189,7 +189,8 @@ input[type="radio"]{
 
 }
 
-/* .submit-button:hover{
-    box-shadow: 0 3px 6px violet;
+@media (max-width:600px){
+    #survey-form{
+        width:100%;
+    }
 }
- */
